Fix : alignment of main action buttons

--- a/src/Pages/Authentication/login-signup.css
+++ b/src/Pages/Authentication/login-signup.css
@@ -41,6 +41,7 @@
 .login__form--container .main--btn {
   font-size: 2rem;
   width: 100%;
+  margin: 0;
   margin-bottom: 1rem;
 }
 
